# EasyDataAgent

./: .gitignore  FEATURE_PROGRESS.md  README.md  docker-compose.prod.yml  docker-compose.yml  graph.py  langgraph.json  prompt.txt  pyproject.toml  requirements.txt
backend/: graph.py  prompt.txt  requirements.txt
frontend/: Dockerfile  next.config.mjs
frontend/src/providers/: Stream.tsx
