[project]
name = "easydataagent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cryptography>=44.0.3",
    "langchain-core>=0.3.68",
    "langchain-openai>=0.3.28",
    "langchain-tavily>=0.2.6",
    "langgraph>=0.5.1",
    "langgraph-cli[inmem]>=0.3.3",
    "langsmith>=0.4.4",
    "matplotlib>=3.10.3",
    "openpyxl>=3.1.5",
    "pandas>=2.3.0",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
]
